--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,9 +11,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Create presentations on the fly with OmniPresent"
     />
-    <title>React App</title>
+    <title>OmniPresent</title>
   </head>
   <body>
     <div id="root"></div>
